配置文件修改 mybatis 别名配置 and 阿里规范检查

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     timeout: 5000
     database: 0
 ibatis:
-  typeAliasesPackage: com.learn.*.po
+  typeAliasesPackage: com.service.auth.entity
   mapper:
     locations:
       test: classpath:mapper/test/*.xml
