解决jvm使用的冲突，tomcat中不同的server 注册jmx必须使用不同的jvm

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: service-auth
+  ##解决jvm使用的冲突，tomcat中不同的server 注册jmx必须使用不同的jvm
+  jmx:
+    default-domain: auth-server
   # redis configuration
   redis:
     host: 127.0.0.1
