--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,37 @@
             <groupId>org.springframework.boot</groupId>
             <scope>test</scope>
         </dependency>
+        <!--swagger 依赖-->
+        <dependency>
+            <artifactId>springfox-swagger2</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>swagger-annotations</artifactId>
+                    <groupId>io.swagger</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>swagger-models</artifactId>
+                    <groupId>io.swagger</groupId>
+                </exclusion>
+            </exclusions>
+            <groupId>io.springfox</groupId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <groupId>io.springfox</groupId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <artifactId>swagger-annotations</artifactId>
+            <groupId>io.swagger</groupId>
+            <version>1.5.21</version>
+        </dependency>
+        <dependency>
+            <artifactId>swagger-models</artifactId>
+            <groupId>io.swagger</groupId>
+            <version>1.5.21</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
